--- a/Bonita/app/src/main/res/layout/activity_notification.xml
+++ b/Bonita/app/src/main/res/layout/activity_notification.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Notification"
+    tools:context=".activity.Notification"
     android:orientation="vertical">
 
     <LinearLayout
@@ -30,7 +30,7 @@
         android:paddingTop="20dp"
         android:paddingLeft="16dp"
         android:paddingBottom="10dp"
-        android:background="@drawable/border_bottom_top"
+        android:background="@drawable/border_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
