--- a/Bonita/app/src/main/res/layout/fragment_choose_slot.xml
+++ b/Bonita/app/src/main/res/layout/fragment_choose_slot.xml
@@ -14,7 +14,7 @@
             android:background="@drawable/border_bottom"
             android:layout_marginBottom="5dp"
             android:textColor="@color/black"
-            android:id="@+id/textView1"
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_centerHorizontal="true"
