--- a/Bonita/app/src/main/res/values/styles.xml
+++ b/Bonita/app/src/main/res/values/styles.xml
@@ -32,6 +32,10 @@
         <item name="android:textColorPrimary">@color/black</item>
         <item name="android:background">@color/white</item>
     </style>
+    <style name="RatingBar" parent="Widget.AppCompat.RatingBar.Small">
+        <item name="android:colorControlHighlight">@color/white</item>
+        <item name="android:colorControlActivated">@color/black</item>
 
+    </style>
 
 </resources>
