--- a/Bonita/app/src/main/res/layout/activity_detail_discount.xml
+++ b/Bonita/app/src/main/res/layout/activity_detail_discount.xml
@@ -240,6 +240,7 @@
                     android:text="xác nhận đặt chỗ"
                     android:background="@color/red"
                     android:layout_marginRight="16dp"
+                    android:onClick="clickToOrder"
                     android:textColor="@color/white"
                     android:textStyle="bold"/>
                 <TextView
