--- a/Bonita/app/src/main/res/drawable-v21/border_radius_slot_item_green.xml
+++ b/Bonita/app/src/main/res/drawable-v21/border_radius_slot_item_green.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <corners android:radius="3dp">
     </corners>
-    <solid android:color="@color/button_green">
+    <solid android:color="@color/line">
     </solid>
 </shape>
