--- a/Bonita/app/src/main/res/drawable/border_radius_slot_item.xml
+++ b/Bonita/app/src/main/res/drawable/border_radius_slot_item.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <corners android:radius="3dp">
     </corners>
-    <solid android:color="#FF9800">
+    <solid android:color="@color/black">
     </solid>
 </shape>
