--- a/Bonita/app/src/main/res/layout/activity_main_page.xml
+++ b/Bonita/app/src/main/res/layout/activity_main_page.xml
@@ -118,17 +118,38 @@
                             app:sliderScrollTimeInSec="1"
                             app:sliderStartAutoCycle="true" />
                     </androidx.cardview.widget.CardView>
+
                     <!--type-->
-                    <TextView
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvType"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"/>
+
+                    <!--nearby location-->
+                    <LinearLayout
+                        android:layout_marginLeft="15dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
                         android:layout_marginTop="30dp"
-                        android:text="BẠN CẦN KHUYẾN MÃI GÌ?"
-                        android:textColor="@color/text"
-                        android:textSize="18dp"
-                        android:textStyle="bold" />
+                        android:orientation="horizontal">
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:text="ĐẶT NHIỀU GẦN BẠN"
+                            android:textColor="@color/text"
+                            android:textSize="18dp"
+                            android:textStyle="bold" />
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginRight="-130dp"
+                            android:src="@drawable/ic_next" />
+                    </LinearLayout>
                     <LinearLayout
                         android:layout_width="60dp"
                         android:layout_height="2dp"
@@ -136,10 +157,42 @@
                         android:layout_marginTop="10dp"
                         android:background="@color/line" />
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rvType"
+                    <LinearLayout
+                        android:layout_marginLeft="15dp"
                         android:layout_width="match_parent"
-                        android:layout_height="100dp" />
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="18dp"
+                            android:layout_height="18dp"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginRight="7dp"
+                            android:src="@drawable/ic_location" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:text="50 Lê Văn Việt, Hiệp Phú, Quận 9, Hồ Chí Mi..."
+                            android:textStyle="bold" />
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="25dp"
+                            android:layout_gravity="center_vertical|right"
+                            android:layout_marginRight="5dp"
+                            android:src="@drawable/ic_rotate_left_black_24dp" />
+                    </LinearLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_marginLeft="15dp"
+                        android:id="@+id/rvNearby"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="25dp" />
+
 
                     <!--Brand-->
 
@@ -164,7 +217,7 @@
                         android:id="@+id/rvBrand"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="30dp"
                         android:layout_marginLeft="15dp"/>
 
                     <!--discount filter-->
@@ -172,8 +225,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
-                        android:layout_marginTop="40dp"
-                        android:text="GIẢM SÂU NHẤT"
+                        android:layout_marginTop="50dp"
+                        android:text="ƯU ĐÃI"
                         android:textColor="@color/text"
                         android:textSize="18dp"
                         android:textStyle="bold" />
@@ -184,12 +237,34 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginTop="10dp"
                         android:background="@color/line" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Đẹp hơn, tiết kiệm hơn"
+                        android:textStyle="italic"
+                        android:textColor="@color/text_top"
+                        android:textSize="12dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="5dp"/>
+
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvSuperDiscount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp" />
+
+
+                    <Button
+                        android:id="@+id/btnViewMore"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        style="@style/CustomTextAppearance"
+                        android:text="Xem thêm"
+                        android:background="@drawable/border_button"
+                        android:textColor="@color/view_more"
+                        android:layout_marginTop="20dp"
+                        android:layout_gravity="center_horizontal"/>
 
                     <!--top-->
                     <TextView
