--- a/Bonita/app/src/main/res/values/colors.xml
+++ b/Bonita/app/src/main/res/values/colors.xml
@@ -25,4 +25,5 @@
     <color name="lightGrey">#D3D3D3</color>
     <color name="title">#232F34</color>
     <color name="button_green">#009432</color>
+    <color name="view_more">#006622</color>
 </resources>
