--- a/Bonita/app/src/main/res/drawable/border_button.xml
+++ b/Bonita/app/src/main/res/drawable/border_button.xml
@@ -2,10 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/line"/>
+            <solid android:color="@color/white"/>
             <corners
-                android:radius="8dp">
+                android:radius="30dp">
             </corners>
+            <stroke android:color="@color/view_more"
+                android:width="1dp"/>
         </shape>
     </item>
 </selector>
