--- a/Bonita/app/src/main/res/drawable/border_nor_yellow.xml
+++ b/Bonita/app/src/main/res/drawable/border_nor_yellow.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#FFEEEEEE" />
-    <stroke android:width="0.7dp" android:color="#FF9800" />
+    <stroke android:width="0.7dp" android:color="@color/black" />
     <padding android:left="1dp" android:top="1dp" android:right="1dp"
         android:bottom="1dp" />
 </shape>
