--- a/Bonita/app/src/main/res/layout/activity_sale_off.xml
+++ b/Bonita/app/src/main/res/layout/activity_sale_off.xml
@@ -23,62 +23,33 @@
         android:layout_height="match_parent"
         android:textStyle="bold"
         android:textColor="@color/red"
-        android:text="MÃ KHUYẾN MÃI CỦA TÔI"
+        android:text="ĐẶT CHỖ CỦA TÔI"
         android:gravity="center"/>
 </LinearLayout>
-    <TextView
-        android:text="MÃ HẾT HIỆU LỰC"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="16dp"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:background="@drawable/border_bottom_top"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@color/orange"/>
-        <LinearLayout
 
-            android:layout_marginLeft="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Bonita"
-                android:textSize="16dp"
-                android:textStyle="bold"/>
-                <TextView
-                    android:textStyle="bold"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/red"
-                    android:text="200K"/>
-            <TextView
-                android:layout_marginRight="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Đặt chỗ: 3 khách, lúc 19:00 Thứ 5, 03/10/2019"/>
-            <LinearLayout
-                android:background="@color/orange"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Đã đổi"
-                    android:textColor="@color/white"/>
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabOrder"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/boder_radius_tab_item"
+        app:tabGravity="fill"
+        app:tabMode="fixed"
+        app:tabTextAppearance="@style/TabOrderTextAppearance">
+
+    <com.google.android.material.tabs.TabItem
+        android:id="@+id/tabBooking"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="Đặt chỗ"/>
+
+    <com.google.android.material.tabs.TabItem
+        android:id="@+id/tabHistory"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="Lịch sử" />
+    </com.google.android.material.tabs.TabLayout>
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
