--- a/Bonita/app/src/main/res/layout/super_discount_layout.xml
+++ b/Bonita/app/src/main/res/layout/super_discount_layout.xml
@@ -37,7 +37,7 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="20dp"
+                        android:layout_height="30dp"
                         android:src="@drawable/ic_tag"
                         android:layout_gravity="center_vertical"/>
 
@@ -47,8 +47,8 @@
                         android:layout_height="20dp"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="5dp"
-                        android:textColor="@color/white"
-                        android:textSize="15dp"
+                        android:textColor="#ff9900"
+                        android:textSize="17dp"
                         android:textStyle="bold" />
                 </LinearLayout>
                 <TextView
