--- a/Bonita/app/src/main/res/layout/activity_brand.xml
+++ b/Bonita/app/src/main/res/layout/activity_brand.xml
@@ -8,43 +8,110 @@
     android:orientation="vertical"
     android:background="@color/white">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/main"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/btnBack"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_arrow_back_black_24dp"
-            android:layout_marginLeft="15dp"/>
-
-        <TextView
-            android:layout_width="280dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center_horizontal"
-            android:layout_marginLeft="10dp"
-            android:text="30 SHINE "
-            android:textColor="@color/white"
-            android:textSize="15dp" />
-
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_bookmark_border_black_24dp" />
-
-    </LinearLayout>
-
-<!--    <ImageView-->
+<!--    <LinearLayout-->
 <!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="500px"-->
-<!--        android:src="@drawable/brand_detail"-->
-<!--        android:scaleType="fitXY"/>-->
+<!--        android:layout_height="50dp"-->
+<!--        android:background="@color/main"-->
+<!--        android:orientation="horizontal">-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/btnBack"-->
+<!--            android:layout_width="30dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:layout_gravity="center_vertical"-->
+<!--            android:src="@drawable/ic_arrow_back_black_24dp"-->
+<!--            android:layout_marginLeft="5dp"/>-->
+
+<!--        <TextView-->
+<!--            android:layout_width="280dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:gravity="center_horizontal"-->
+<!--            android:layout_marginLeft="10dp"-->
+<!--            android:text="30 SHINE "-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="15dp" />-->
+
+<!--        <ImageView-->
+<!--            android:layout_width="25dp"-->
+<!--            android:layout_height="25dp"-->
+<!--            android:layout_gravity="center_vertical"-->
+<!--            android:src="@drawable/ic_bookmark_border_black_24dp" />-->
+
+<!--    </LinearLayout>-->
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="400px"
+        android:src="@drawable/brand_detail"
+        android:scaleType="fitXY"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/btnBack"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_arrow_back_black_24dp"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/border_cycle_menu"/>
+
+
+                <ImageButton
+                    android:id="@+id/btnSave"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_bookmark_border_black_24dp"
+                    android:background="@drawable/border_cycle_menu"
+                    android:layout_marginLeft="280dp"/>
+
+            </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="30 SHINE"
+                    android:textStyle="bold"
+                    android:textColor="@color/line"
+                    android:textSize="25dp"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="215px"
+                    android:layout_marginLeft="140dp"
+                    android:gravity="center_horizontal"
+                    android:fontFamily="serif"/>
+            </LinearLayout>
+        </FrameLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="200px"
+        android:layout_height="200px"
+        app:cardCornerRadius="8dp"
+        android:layout_marginTop="-120px"
+        android:layout_marginLeft="30px"
+        android:background="@color/white">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/logo_thirty_shine" />
+    </androidx.cardview.widget.CardView>
+
+
+
 
 
 </LinearLayout>
