--- a/Bonita/app/src/main/res/layout/activity_order_detail.xml
+++ b/Bonita/app/src/main/res/layout/activity_order_detail.xml
@@ -170,6 +170,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/linear_sale"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
